Fixed carousel display and burger collapse on sub pages

--- a/assets/style.css
+++ b/assets/style.css
@@ -55,6 +55,14 @@ p#mission-text {
   z-index: -1;
 }
 
+#caption-1,
+#caption-2,
+#caption-3,
+#caption-4 {
+  position: absolute;
+  top: 100px;
+}
+
 #navigation {
   box-shadow: 0px 3px 3px grey;
   position: fixed;
@@ -120,5 +128,12 @@ footer p {
 @media only screen and (max-width: 1080px) {
   #contact-container {
     width: 100%;
+  }
+
+  #caption-1,
+  #caption-2,
+  #caption-3,
+  #caption-4 {
+    position: absolute;
   }
 }
